--- a/Calculator-JS-main/index.html
+++ b/Calculator-JS-main/index.html
@@ -12,7 +12,7 @@
     <main>
         <input type="number" id="display" value=0>
         <div class="keys">
-            <button class="c_key" id="clear">C</button>
+            <button class="key" id="clear">C</button>
             <button class="key" id="negate">+/-</button>
             <button class="key" id="percent">%</button>
             <button class="key" id="divide">/</button>
@@ -31,7 +31,7 @@
             <span></span>
             <button class="key" id="0">0</button>
             <button class="key" id="dot">.</button>
-            <button class="equal_key">=</button>
+            <button class="key" id="equal">=</button>
         </div>
     </main>
 </body>
